Specify test jvm settings