@@ -63,7 +63,7 @@ trait Prototypes {
     // Use ScalaTest https://groups.google.com/d/topic/play-framework/rZBfNoGtC0M/discussion
     testOptions in Test := Nil,
 
-    concurrentRestrictions in Global += Tags.limit(Tags.Test, 3),
+    concurrentRestrictions in Global += Tags.limit(Tags.Test, 4),
 
     // Copy unit test resources https://groups.google.com/d/topic/play-framework/XD3X6R-s5Mc/discussion
     unmanagedClasspath in Test <+= (baseDirectory) map { bd => Attributed.blank(bd / "test") },
@@ -75,7 +75,9 @@ trait Prototypes {
 
     // These settings are needed for forking, which in turn is needed for concurrent restrictions.
     javaOptions in Test += "-DAPP_SECRET=this_is_not_a_real_secret_just_for_tests",
-    javaOptions in Test += "-XX:MaxPermSize=680m",
+    javaOptions in Test += "-Xmx1024M",
+    javaOptions in Test += "-XX:+UseConcMarkSweepGC",
+    javaOptions in Test += "-XX:ReservedCodeCacheSize=128m",
     baseDirectory in Test := file(".")
   )
 
